k8s-app/simple-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: simple-app
  namespace: default
  labels:
    app: simple-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: simple-app
